[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/graphics/traps/crocodiles.png" type="Texture" id=1]
[ext_resource path="res://scripts/CrocodilePit.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 125, 125 )

[node name="CrocodilePit" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Crocodile1" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Crocodile2" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="timeout" from="Crocodile1" to="." method="_on_Crocodile1_timeout"]
[connection signal="timeout" from="Crocodile2" to="." method="_on_Crocodile2_timeout"]
